--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
    <meta charset="UTF-8">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src ="http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
+    <script type="text/javascript" charset="utf-8" src ="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.12/paper.js"></script>
     <style type="text/css">
       html, body{
