--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <body>
     <canvas id="myCanvas"></canvas>
     <canvas id="myCanvas1"></canvas>
-    <code id="myCode"></code>
+    <code id="myCode">c = circle</code>
  </body>
   <script type="text/javascript" src="lib/jqconsole.js"></script>
   <script type="text/javascript" src="lib/peg.js"></script>
