--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Full documentation: http://pegjs.majda.cz/documentation#grammar-syntax-and-seman
 -->
 
 <grammar>
-  start       = p:literal+ { return Match.eval(p) }
+  start       = p:literal+ { return Machine.eval(p) }
 
   literal     = operation / assign / define / number / string / quotation / word
 
