--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         left: 10px;
       }
       #myCode, #repl{
-        font-size: 16px;
+        font-size: 18px;
       }
       #repl{
         position: absolute;
@@ -93,14 +93,14 @@
 
 PEG syntax quick reference
 
-'x'   : match the literal character 'x'
-x+    : match x 1 or more times
-x*    : match x 0 or more times
-x?    : match x 0 or 1 times
-!x    : match anything but the match x
-x/y   : match x or y, trying in that order
-[xyz] : match one of the literal character 'x', 'y', or 'z'
-v:x   : assign the result of the match x to the variable v
+'x'   : Machine the literal character 'x'
+x+    : Machine x 1 or more times
+x*    : Machine x 0 or more times
+x?    : Machine x 0 or 1 times
+!x    : Machine anything but the Machine x
+x/y   : Machine x or y, trying in that order
+[xyz] : Machine one of the literal character 'x', 'y', or 'z'
+v:x   : assign the result of the Machine x to the variable v
 
 Full documentation: http://pegjs.majda.cz/documentation#grammar-syntax-and-semantics-parsing-expression-types
 
